--- a/Notebooks/Lithology.ipynb
+++ b/Notebooks/Lithology.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -92,6 +92,7 @@
     "# windows / linux paths\n",
     "from pathlib import Path\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
@@ -105,53 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7 entries, 0 to 6\n",
-      "Data columns (total 24 columns):\n",
-      "well_id                        7 non-null object\n",
-      "dh_no                          7 non-null int64\n",
-      "unit_long                      7 non-null int64\n",
-      "unit_hyphen                    7 non-null object\n",
-      "obs_no                         0 non-null float64\n",
-      "dh_name                        0 non-null float64\n",
-      "easting                        7 non-null float64\n",
-      "northing                       7 non-null float64\n",
-      "zone                           7 non-null int64\n",
-      "latitude                       7 non-null float64\n",
-      "longitude                      7 non-null float64\n",
-      "aquifer                        7 non-null object\n",
-      "unit_depth_from                7 non-null int64\n",
-      "unit_depth_to                  7 non-null float64\n",
-      "hydro_type                     0 non-null float64\n",
-      "hydro_depth_to_greater_flag    0 non-null float64\n",
-      "comments                       0 non-null float64\n",
-      "map_symbol                     7 non-null object\n",
-      "strat_name                     7 non-null object\n",
-      "hydrostrat_desc                0 non-null float64\n",
-      "subunit_depth_from             2 non-null float64\n",
-      "subunit_depth_to               2 non-null float64\n",
-      "hydro_subunit_code             2 non-null object\n",
-      "hydro_subunit_desc             2 non-null object\n",
-      "dtypes: float64(13), int64(4), object(7)\n",
-      "memory usage: 1.4+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = pd.read_csv(Path(\"..\") / \"data\" / \"6628-21945_stratigraphy.csv\")\n",
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -175,110 +130,160 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>unit_depth_from</th>\n",
-       "      <th>unit_depth_to</th>\n",
-       "      <th>strat_name</th>\n",
+       "      <th>depth_from</th>\n",
+       "      <th>depth_to</th>\n",
+       "      <th>lith1</th>\n",
+       "      <th>lith2</th>\n",
+       "      <th>descr</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>Quaternary rocks</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Landfill (pungent, containinng plastic bags, s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>12</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>Hindmarsh Clay</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>SAND</td>\n",
+       "      <td>SILT</td>\n",
+       "      <td>Sandy silt. Transition to native sediment.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>67</td>\n",
-       "      <td>83.0</td>\n",
-       "      <td>Carisbrooke Sand</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>SAND</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Light grey medium sand.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>83</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>Hallett Cove Sandstone</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>CLYU</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Light grey sandy clay.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>102</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>Port Willunga Formation</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>170</td>\n",
-       "      <td>178.0</td>\n",
-       "      <td>Munno Para Clay Member</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>178</td>\n",
-       "      <td>245.5</td>\n",
-       "      <td>Port Willunga Formation</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>CLYU</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Dark brown heavy clay.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   unit_depth_from  unit_depth_to               strat_name\n",
-       "0                0           12.0         Quaternary rocks\n",
-       "1               12           67.0           Hindmarsh Clay\n",
-       "2               67           83.0         Carisbrooke Sand\n",
-       "3               83          102.0   Hallett Cove Sandstone\n",
-       "4              102          170.0  Port Willunga Formation\n",
-       "5              170          178.0   Munno Para Clay Member\n",
-       "6              178          245.5  Port Willunga Formation"
+       "   depth_from  depth_to lith1 lith2  \\\n",
+       "0         0.0       4.5   NaN   NaN   \n",
+       "1         4.5       6.0  SAND  SILT   \n",
+       "2         6.0       7.0  SAND   NaN   \n",
+       "3         7.0       8.0  CLYU   NaN   \n",
+       "4         8.0       9.0  CLYU   NaN   \n",
+       "\n",
+       "                                               descr  \n",
+       "0  Landfill (pungent, containinng plastic bags, s...  \n",
+       "1         Sandy silt. Transition to native sediment.  \n",
+       "2                            Light grey medium sand.  \n",
+       "3                             Light grey sandy clay.  \n",
+       "4                             Dark brown heavy clay.  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = df[[\"unit_depth_from\", \"unit_depth_to\", \"strat_name\"]]\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.rename(\n",
-    "    {\n",
-    "        \"unit_depth_from\": \"depth_from\",\n",
-    "        \"unit_depth_to\": \"depth_to\",\n",
-    "        \"strat_name\": \"label\",\n",
+    "df = pd.read_csv(Path(\"..\") / \"data\" / \"6628-21945_lithology.csv\").rename(\n",
+    "    columns={\n",
+    "        \"major_lith_code\": \"lith1\",\n",
+    "        \"minor_lith_code\": \"lith2\",\n",
+    "        \"Description\": \"descr\",\n",
     "    }\n",
-    ")"
+    ")[[\"depth_from\", \"depth_to\", \"lith1\", \"lith2\", \"descr\"]]\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "colours = sns.color_palette(\"pastel\", len(df))"
+    "df.loc[df.lith1.isnull() & df.lith2.isnull(), \"colour\"] = \"rgb(125, 125, 125)\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SAND', 'CLYU', 'LMST']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lith1s = [l for l in df.lith1.unique() if not l is np.nan]\n",
+    "lith1s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colours = sns.color_palette(\"pastel\", len(lith1s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "to_rgb = lambda r, g, b: f\"rgb({r * 255}, {g * 255}, {b * 255})\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'SAND' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-32-fbabce67d2b1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlith1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"lith1\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mlith_code\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mto_rgb\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mcolours\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlith_code\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\envs\\dev\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36mapply\u001b[1;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[0;32m   4043\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4044\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4045\u001b[1;33m                 \u001b[0mmapped\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4046\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4047\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-32-fbabce67d2b1>\u001b[0m in \u001b[0;36m<lambda>\u001b[1;34m(lith_code)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlith1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"lith1\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mlith_code\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mto_rgb\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mcolours\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlith_code\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: 'SAND' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "df.loc[~df.lith1.isnull(), \"lith1\"].apply(lambda lith_code: to_rgb(*colours[lith.index(lith_code)))"
    ]
   },
   {
@@ -295,7 +300,7 @@
     "            xref=\"paper\",\n",
     "            x0=0,\n",
     "            x1=1,\n",
-    "            fillcolor=to_rgb(*colours[i]),\n",
+    "            fillcolor=to_rgb(*row.),\n",
     "            opacity=0.5,\n",
     "            layer=\"below\",\n",
     "            line_width=1)\n",
@@ -303,7 +308,7 @@
     "    shape[\"y1\"] = row.unit_depth_from\n",
     "    unit_thk = (row.unit_depth_to - row.unit_depth_from)\n",
     "    unit_depth = row.unit_depth_from + unit_thk / 2\n",
-    "    ann = dict(xref=\"paper\", yref=\"y\", x=0.5, y=unit_depth, text=row.label, ax=0, ay=0)\n",
+    "    ann = dict(xref=\"paper\", yref=\"y\", x=0.5, y=unit_depth, text=row.descr, ax=0, ay=0)\n",
     "    shapes.append(shape)\n",
     "    annotations.append(ann)"
    ]
